Enable database table creation for Railway deployment
- Add DB_SYNCHRONIZE environment variable to control table creation
- Allows enabling synchronize for initial setup on Railway
- Update .env.example and RAILWAY_SETUP.md with instructions
- After tables are created, set DB_SYNCHRONIZE=false for production safety

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ NODE_ENV=development
 
 # Frontend URL (for CORS and WebSocket)
 FRONTEND_URL=http://localhost:3000
+
+# For Railway: Set DB_SYNCHRONIZE=true to auto-create tables on first deploy
+# After tables are created, set to false for production safety
+DB_SYNCHRONIZE=false
