Set up database migrations for Railway deployment
- Create TypeORM config file for migrations
- Enable automatic migration execution on startup (migrationsRun: true)
- Generate initial migration from entities
- Add migration script for manual execution
- Update Procfile to run migrations automatically
- Add comprehensive migrations setup guide

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/config/typeorm.config.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d src/config/typeorm.config.ts",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/config/typeorm.config.ts"
+    "migration:run:prod": "node dist/config/typeorm.config.js migration:run",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/config/typeorm.config.ts",
+    "migrate": "node run-migrations.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
